@@ -1,3 +1,9 @@
+2005-03-27  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/interface.c: (create_main_window):
+	* src/procman.c: (procman_data_new): Fixed current_tab save.
+	current_tab is {0, 1, 2}.
+
 2005-03-18  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/callbacks.c: (get_last_selected), (cb_row_selected):
